Test/dafny0/ConstantErrors.dfy.expect
ConstantErrors.dfy(5,6): Error: type for constant two is int, but its initialization value type is real
ConstantErrors.dfy(8,6): Error: constant definition contains a cycle: five -> six
2 resolution/type errors detected in ConstantErrors.dfy
